--- a/index.html
+++ b/index.html
@@ -26,73 +26,46 @@
       </div>
     </header>
 
-    <!-- Task Input Section -->
-    <section class="task-input">
-      <h2>Add a Task</h2>
-      <form id="task-form">
-        <input
-          type="text"
-          id="task-name"
-          placeholder="Enter task name"
-          required
-        />
-        <button type="submit">Add Task</button>
-      </form>
-      <ul id="task-list" class="task-list">
-        <li>
-          <input type="checkbox" id="task1" name="task1" />
-          <label for="task1">Example Task 1</label>
-        </li>
-        <li>
-          <input type="checkbox" id="task2" name="task2" />
-          <label for="task2">Example Task 2</label>
-        </li>
-      </ul>
-    </section>
-
     <!-- Features Section -->
-    <main>
-      <section class="features" id="features">
-        <h2>Key Features</h2>
-        <div class="features-container">
-          <article class="feature-card">
-            <img
-              src="https://media.istockphoto.com/id/1303877287/vector/paper-checklist-and-pencil-flat-pictogram.jpg?s=612x612&w=0&k=20&c=NoqPzn94VH2Pm7epxF8P5rCcScMEAiGQ8Hv_b2ZwRjY="
-              alt="Task Management icon"
-              class="feature-icon task-management-icon"
-            />
-            <h3>Task Management</h3>
-            <p>
-              Create, prioritize, and track your tasks with ease using our
-              intuitive interface.
-            </p>
-          </article>
-          <article class="feature-card">
-            <img
-              src="https://t3.ftcdn.net/jpg/02/77/18/82/360_F_277188285_BmZ7gYMS6mefo8uFUDTwtaeFZpgI5Dz6.jpg"
-              alt="Calendar icon"
-              class="feature-icon"
-            />
-            <h3>Smart Scheduling</h3>
-            <p>
-              Plan your day with automated reminders and a built-in calendar
-              sync.
-            </p>
-          </article>
-          <article class="feature-card">
-            <img
-              src="https://srv.carbonads.net/static/30242/5553640155979510763aebb62751652e628b00e1"
-              alt="Analytics icon"
-              class="feature-icon"
-            />
-            <h3>Progress Tracking</h3>
-            <p>
-              Monitor your productivity with insightful analytics and reports.
-            </p>
-          </article>
-        </div>
-      </section>
-    </main>
+    <section class="features" id="features">
+      <h2>Key Features</h2>
+      <div class="features-container">
+        <article class="feature-card">
+          <img
+            src="https://media.istockphoto.com/id/1303877287/vector/paper-checklist-and-pencil-flat-pictogram.jpg?s=612x612&w=0&k=20&c=NoqPzn94VH2Pm7epxF8P5rCcScMEAiGQ8Hv_b2ZwRjY="
+            alt="Task Management icon"
+            class="feature-icon task-management-icon"
+          />
+          <h3>Task Management</h3>
+          <p>
+            Create, prioritize, and track your tasks with ease using our
+            intuitive interface.
+          </p>
+        </article>
+        <article class="feature-card">
+          <img
+            src="https://t3.ftcdn.net/jpg/02/77/18/82/360_F_277188285_BmZ7gYMS6mefo8uFUDTwtaeFZpgI5Dz6.jpg"
+            alt="Calendar icon"
+            class="feature-icon"
+          />
+          <h3>Smart Scheduling</h3>
+          <p>
+            Plan your day with automated reminders and a built-in calendar sync.
+          </p>
+        </article>
+        <article class="feature-card">
+          <img
+            src="https://srv.carbonads.net/static/30242/5553640155979510763aebb62751652e628b00e1"
+            alt="Analytics icon"
+            class="feature-icon"
+          />
+          <h3>Progress Tracking</h3>
+          <p>
+            Monitor your productivity with insightful analytics and reports.
+          </p>
+        </article>
+      </div>
+    </section>
 
     <!-- Footer Section -->
     <footer class="footer">
