--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<--objective : The goal of the project is to design and develop a responsive page for a fictional product or service using HTML and CSS.
+-->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
